fix: make nav spacing more consistent

--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -34,9 +34,9 @@
 
 	& details {
 		& summary {
-			margin-bottom: var(--spacing-3);
+			margin-bottom: var(--spacing-3);		
+			font-weight: bold;
 			margin-left: calc(var(--spacing-3) * -1);
-			font-weight: bold;			
 		}
 
 		& summary::marker {
@@ -53,19 +53,20 @@
 			flex-wrap: wrap;
 			gap: var(--spacing-4);
 			background: var(--color-nav-bg);
-			margin: 0 calc(var(--spacing-6) * -1);
-			padding: var(--spacing-3);
+			margin: 0 calc(var(--spacing-6) * -1);		
+			padding: var(--spacing-3) 0;
 			border-radius: 0;
 
 			@media (--biig) {
 				border-radius: var(--border-radius-lg);
+				margin: 0 calc(var(--spacing-3) * -1);
 			}
 		}
 	}
 
 	& div {
 		& strong {
-			padding: var(--spacing-2);
+			padding: var(--spacing-3);
 		}
 	}
 
@@ -83,7 +84,7 @@
 
 		& a {
 			text-decoration: none;
-			padding: var(--spacing-2);
+			padding: var(--spacing-3);
 			color: var(--color-nav-link);
 
 			&:hover {
